--- a/index.html
+++ b/index.html
@@ -1,74 +1,80 @@
-<!doctype HTML>
-<head>
-  <title>Painel de Botões - Neumorfismo</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-/">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Painel de Botões - Neumorfismo</title>
 
-  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="style.css"/>
-</head>
-<body>
-  <main id="light-container" class="container">
-    <div id="wifi-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-wifi" aria-hidden="true"></i>
-    </div>
-    <div id="bluetooth-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
-    </div>
-    <div id="bell-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-bell" aria-hidden="true"></i>
-    </div>
-    <div id="bolt-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-bolt" aria-hidden="true"></i>
-    </div>
-    <div id="phone-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-phone" aria-hidden="true"></i>
-    </div>
-    <div id="volume-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-volume-up" aria-hidden="true"></i>
-    </div>
-    <div id="plane-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-plane" aria-hidden="true"></i>
-    </div>
-    <div id="share-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-share-alt" aria-hidden="true"></i>
-    </div>
-    <div id="eye-light-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-eye" aria-hidden="true"></i>
-    </div>
-  </main>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+  </head>
+  <body>
+    <section id="light-container" class="container">
+      <button id="wifi-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-wifi" aria-hidden="true"></i>
+      </button>
+      <button id="bluetooth-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
+      </button>
+      <button id="bell-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-bell" aria-hidden="true"></i>
+      </button>
+      <button id="bolt-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-bolt" aria-hidden="true"></i>
+      </button>
+      <button id="phone-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-phone" aria-hidden="true"></i>
+      </button>
+      <button id="volume-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-volume-up" aria-hidden="true"></i>
+      </button>
+      <button id="plane-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-plane" aria-hidden="true"></i>
+      </button>
+      <button id="share-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-share-alt" aria-hidden="true"></i>
+      </button>
+      <button id="eye-light-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-eye" aria-hidden="true"></i>
+      </button>
+    </section>
 
-  <main id="dark-container" class="container">
-    <div id="wifi-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-wifi" aria-hidden="true"></i>
-    </div>
-    <div id="bluetooth-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
-    </div>
-    <div id="bell-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-bell" aria-hidden="true"></i>
-    </div>
-    <div id="bolt-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-bolt" aria-hidden="true"></i>
-    </div>
-    <div id="phone-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-phone" aria-hidden="true"></i>
-    </div>
-    <div id="volume-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-volume-up" aria-hidden="true"></i>
-    </div>
-    <div id="plane-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-plane" aria-hidden="true"></i>
-    </div>
-    <div id="share-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-share-alt" aria-hidden="true"></i>
-    </div>
-    <div id="eye-dark-button" class="button" onclick="changeButtonState(this.id)">
-      <i class="fa fa-eye" aria-hidden="true"></i>
-    </div>
-  </main>
+    <section id="dark-container" class="container">
+      <button id="wifi-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-wifi" aria-hidden="true"></i>
+      </button>
+      <button id="bluetooth-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
+      </button>
+      <button id="bell-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-bell" aria-hidden="true"></i>
+      </button>
+      <button id="bolt-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-bolt" aria-hidden="true"></i>
+      </button>
+      <button id="phone-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-phone" aria-hidden="true"></i>
+      </button>
+      <button id="volume-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-volume-up" aria-hidden="true"></i>
+      </button>
+      <button id="plane-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-plane" aria-hidden="true"></i>
+      </button>
+      <button id="share-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-share-alt" aria-hidden="true"></i>
+      </button>
+      <button id="eye-dark-button" class="button" onclick="changeButtonState(this.id)">
+        <i class="fa fa-eye" aria-hidden="true"></i>
+      </button>
+    </section>
+  </body>
 
+  
   <script type="text/javascript">
     changeButtonState = function(idButton) {
       document.querySelector("#" + idButton).classList.toggle('active');
     }
   </script>
-</body>
+</html>
