fix: Bug in buttons layout

--- a/index.html
+++ b/index.html
@@ -11,61 +11,61 @@
   </head>
   <body>
     <section id="light-container" class="container">
-      <button id="wifi-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="wifi-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-wifi" aria-hidden="true"></i>
       </button>
-      <button id="bluetooth-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="bluetooth-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
       </button>
-      <button id="bell-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="bell-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-bell" aria-hidden="true"></i>
       </button>
-      <button id="bolt-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="bolt-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-bolt" aria-hidden="true"></i>
       </button>
-      <button id="phone-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="phone-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-phone" aria-hidden="true"></i>
       </button>
-      <button id="volume-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="volume-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-volume-up" aria-hidden="true"></i>
       </button>
-      <button id="plane-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="plane-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-plane" aria-hidden="true"></i>
       </button>
-      <button id="share-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="share-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-share-alt" aria-hidden="true"></i>
       </button>
-      <button id="eye-light-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="eye-light-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-eye" aria-hidden="true"></i>
       </button>
     </section>
 
     <section id="dark-container" class="container">
-      <button id="wifi-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="wifi-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-wifi" aria-hidden="true"></i>
       </button>
-      <button id="bluetooth-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="bluetooth-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
       </button>
-      <button id="bell-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="bell-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-bell" aria-hidden="true"></i>
       </button>
-      <button id="bolt-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="bolt-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-bolt" aria-hidden="true"></i>
       </button>
-      <button id="phone-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="phone-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-phone" aria-hidden="true"></i>
       </button>
-      <button id="volume-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="volume-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-volume-up" aria-hidden="true"></i>
       </button>
-      <button id="plane-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="plane-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-plane" aria-hidden="true"></i>
       </button>
-      <button id="share-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="share-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-share-alt" aria-hidden="true"></i>
       </button>
-      <button id="eye-dark-button" class="button" onclick="changeButtonState(this.id)">
+      <button id="eye-dark-button" class="action-button" onclick="changeButtonState(this.id)">
         <i class="fa fa-eye" aria-hidden="true"></i>
       </button>
     </section>
